dc1/calico-bkup-c1/calico-networkpolicies-backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2023-08-15T15:57:43Z"
    generation: 1
    name: allow-apiserver
    namespace: calico-apiserver
    ownerReferences:
    - apiVersion: operator.tigera.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: APIServer
      name: default
      uid: abf3aebb-4431-44e1-88c9-ccdbc4b7ea3f
    resourceVersion: "1607"
    uid: 9e778b70-027a-4ae0-b46e-4b8cf66842bd
  spec:
    ingress:
    - ports:
      - port: 5443
        protocol: TCP
    podSelector:
      matchLabels:
        apiserver: "true"
    policyTypes:
    - Ingress
  status: {}
kind: List
metadata:
  resourceVersion: ""
